--- a/data-science.html
+++ b/data-science.html
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/61de3bc8-aa1f-4a6c-b221-d7c8bcd5167a'>thredUP - Data Scientist - Marketplace</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -153,7 +153,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698159085-senior-data-scientist-predictive-maintenance'>Version 1 Senior Data Scientist Predictive Maintenance | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -169,7 +169,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/ca0ca52c-374c-4e01-b249-3c73813e6907'>Wealthfront - Data Science - New College Graduate</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -217,7 +217,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AdamKayGroup/743999698408806-data-scientist'>Adam Kay Group Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States  Atlanta, GA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -229,7 +229,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SoftwareTechnologyInc2/743999698405739-hiring-data-scientist-mettawa-il-fulltime'>Software Technology Inc Hiring---Data Scientist--Mettawa, IL--Fulltime | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -249,11 +249,11 @@
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/perpetualabs.com/c39b5cba-1831-428d-8f86-459678459ade'>Perpetua Labs - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/4zsxmie7jafqhbwun3nwbwsfjy'>Data Scientist | Strategic Employment</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/4zsxmie7jafqhbwun3nwbwsfjy'>Data Scientist | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Costa Mesa, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -313,7 +313,7 @@ address?...</p>
 Cloud Computing, Graph Databases to solve challenging problems. This is a 
 paid?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
+<h5><a href='https://jobs.lever.co/hubhaus/7c4deec6-bb3d-4912-ae09-d54f7f245c0f'>HubHaus Inc - Data Scientist - Property Pricing</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -332,7 +332,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.qreer.com/jobs/view/10441/data-scientist'>Data Scientist Job in Lisboa, Portugal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
